Convert assertTrue(instanceof) to assertInstanceOf
Convert assertTrue(x instanceof Y) to the JUnit5-native
assertInstanceOf(Y.class, x) in already-migrated test classes.

JIRA: BGPCEP-1096
Change-Id: I9dcb0531f1bf8a22c824341c2c073a5a8b7c0647
Assisted-by: Claude Sonnet 5 <noreply@anthropic.com>
Signed-off-by: Matej Sramcik <matej.sramcik@pantheon.tech>